<?xml version="1.0" encoding="utf-8"?><layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.alvaronunez.studyzone.presentation.ui.createphotoitem.CreatePhotoItemViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.createitem.CreateItemActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_camera_white"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/photoItemImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> viewmodel.onFabPhotoItemClicked()}" />

        <ImageView
            android:id="@+id/photoItemImage"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:src="@mipmap/no_img"
            android:scaleType="centerCrop"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/photoItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_item_title"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoItemImage" />

        <EditText
            android:id="@+id/photoItemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_item_description"
            android:minLines="3"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoItemTitle"  />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addPhotoItemButton"
            style="@style/MaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/action_add_item"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoItemDescription"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>